<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/main_navi_item_home"/>
    <item
        android:id="@+id/action_kinder"
        android:enabled="true"
        android:icon="@drawable/ic_search_gray_24dp"
        android:title="@string/main_navi_item_kinder" />
    <item
        android:id="@+id/action_board"
        android:enabled="true"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/main_navi_item_board" />

    <item
        android:id="@+id/action_alert"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/main_navi_item_alert"/>

    <item
        android:id="@+id/action_message"
        android:enabled="true"
        android:icon="@drawable/ic_mail_black_24dp"
        android:title="@string/main_navi_item_location" />
</menu>